# bitsgrab

./: .gitignore  components.json  eslint.config.js  gg.js  index.html  lingui.config.ts  package-lock.json  package.json  proxy.conf.json  tsconfig.json  vite.config.ts
src/: App.tsx  firebase.ts  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constant.rs  lib.rs  main.rs
src-tauri/src/app_state/: mod.rs
src-tauri/src/commonreq/: mod.rs
src-tauri/src/currentclipboard/: mod.rs
src-tauri/src/downloader/: mod.rs
src-tauri/src/downloadimage/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/video_list_extracting/: mod.rs
src-tauri/src/window_config/: mod.rs
src-tauri/src/yt_dlp_processing/: mod.rs
src/components/: create-auth.tsx  email-auth.tsx  locale-combobox.tsx  locale-switch.tsx  theme-switch.tsx
src/components/icons/: encryption.tsx
src/constants/: common.ts  index.ts  llm.ts  menus.ts  shortcuts.ts  video.ts  windows.ts
src/context/: auth-context.tsx
src/hooks/: index.ts  use-breakpoint.ts  use-copy-to-clipboard.ts  use-heatbeat-online.ts  use-layout-size.ts  use-shortcut.ts  use-theme.ts
src/layout/: MainLayout.tsx  child-layout.tsx  hotkey-mapper.tsx  main-layout.tsx
src/lib/: axios.ts
src/models/: agent-ai.ts
src/pages/: InvokeInput.tsx  home-dashboard.tsx
src/providers/: index.tsx  locale.tsx  theme.tsx
src/router/: index.tsx
src/stores/: agent-ai.ts  auth.ts  downloader.ts  index.ts  save-path.ts  ui.ts
src/types/: global.d.ts
(+97 files in other folders)
